--- a/contactus.html
+++ b/contactus.html
@@ -41,7 +41,17 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm-3 align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <form>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-10 align-self-center">
+                                <button type="submit" class="btn btn-block btn-warning">Reserve Table<a href="#Reserve"></a></button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
