--- a/contactus.html
+++ b/contactus.html
@@ -48,7 +48,7 @@
                     <form>
                         <div class="form-group row">
                             <div class="col-12 col-sm-10 align-self-center">
-                                <button type="submit" class="btn btn-block btn-warning">Reserve Table<a href="#Reserve"></a></button>
+                                <button type="submit" class="btn btn-block btn-warning"><a href="#date">Reserve Table</a></button>
                             </div>
                         </div>
                     </form>
