--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <form>
                         <div class="form-group row">
                             <div class="col-12 col-sm-10 align-self-center">
-                                <button type="submit" class="btn btn-block btn-warning">Reserve Table<a href="#date"></a></button>
+                                <button class="btn btn-block btn-sm btn-warning"><a href="#date">Reserve Table</a></button>
                             </div>
                         </div>
                     </form>
