--- a/aboutus.html
+++ b/aboutus.html
@@ -41,17 +41,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm-3 align-self-center">
+                <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm-3 align-self-center">
-                    <form>
-                        <div class="form-group row">
-                            <div class="col-12 col-sm-10 align-self-center">
-                                <button type="submit" class="btn btn-block btn-warning"><a href="#date">Reserve Table</a></button>
-                            </div>
-                        </div>
-                    </form>
+                <div class="col-12 col-sm align-self-center">
+                    <a role="button" type="submit" class="btn btn-block nav-link btn-warning" href="index.html#Reserve">Reserve Table</a>       
                 </div>
             </div>
         </div>
